# ch-system

./: .deepsource.toml  .gitignore  .tmp.txt  Dockerfile  LICENSE  Procfile  README.md  api.py  commands.py  db_clone.py  db_notify.py  db_utils.py  db_values.py  docker-compose.yml  flos.py  fly.toml  init.py  init.sh  keep_alive.py  main.py  notify.py  pyproject.toml  requirements.txt  reset.py  routine.py  server.py  setup.py  tmp.txt  utils.py
.github/workflows/: codeql-analysis.yml  docker-image.yml  fly.yml  insert_new_data.yml  pytest.yml  test.yml  testing.yml
ch-database/: README.md  api.py  routine.py
ch-discord/: main.py  routine.py  utils.py
ch-security/: server.py
ch-system/database/: main.py
ch-system/discord/: flos.py
ch-system/notify/: main.py
ch-system/web/: main.py
ch-web/: README.md  main.py
chsystem/database/: DBurl.py  DBurlDispatcher.py  api.py  database.py  db.py  dburl.py  insert_new_data.py  main.py  test_database.py  test_db.py  update_data.py
chsystem/discord/: commands.py  discordBot.py  flos.py  main.py  setup.py
chsystem/go-notify/: Dockerfile  database.go  go.mod  go.sum  main.go  utility.go
chsystem/notify/: main.py  (+1 more)
database/: api.py  main.py
db_utilities/: db_utils.py
discord/: commands.py  db_utils.py  flos.py  main.py  routine.py
docs/: d_92898ef300f5cd11_database_py.html  d_92898ef300f5cd11_db_py.html  d_92898ef300f5cd11_test_db_py.html  index.html  status.json
notify/: db_utils.py  main.py
security/: flos.py  main.py  server.py
templates/: dashboard.html  error.html  index.html  logs.html  status.html
terraform/: .gitignore  .terraform.lock.hcl  acr.tf  containerApps.tf  keyvault.tf  main.tf  network.tf  output.tf  postgresql.tf  postgresql_ch.sql  varibles.tf  vm.tf
utility/: db_utils.py  keep_alive.py  routine.py  utils.py
web/: api.py  main.py
(+37 files in other folders)
