[tool.poetry]
name = "repl_python3_ch-discordbot"
version = "0.1.0"
description = ""
authors = ["ArgoPanoptes <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
Flask = "^2.0.2"
Js2Py = "^0.71"
replit = "^3.2.4"
waitress = "^2.0.0"
Paste = "^3.5.0"
nextcord = "^2.0.0a4"
aiodns = "^3.0.0"
Brotli = "^1.0.9"
cchardet = "^2.1.7"
orjson = "^3.6.5"
cutandpaste = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
