[tool.poetry]
name = "chsystem"
version = "0.3.0"
description = "It contains multiple services for Celtic Heroes players"
authors = ["OB <ob>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
Flask = "^2.0.2"
Js2Py = "^0.71"
waitress = "^2.0.0"
Paste = "^3.5.0"
nextcord = "^2.0.0a6"
aiodns = "^3.0.0"
Brotli = "^1.0.9"
cchardet = "^2.1.7"
orjson = "^3.6.6"
cutandpaste = "^0.4.0"
bcrypt = "^3.2.0"
pymongo = "^4.0.1"
dnspython = "^2.2.0"
python-dotenv = "^0.19.2"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
